; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/test/extr_ntb_tool.c_tool_check_ntb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/test/extr_ntb_tool.c_tool_check_ntb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tool_ctx = type { i8, i64, i64, i64, i64, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tool_ctx*)* @tool_check_ntb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tool_check_ntb(%struct.tool_ctx* %0) #0 {
  %2 = alloca %struct.tool_ctx*, align 8
  store %struct.tool_ctx* %0, %struct.tool_ctx** %2, align 8
  %3 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %4 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %3, i32 0, i32 7
  %5 = call i32 @callout_init(i32* %4, i32 1)
  %6 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %7 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %6, i32 0, i32 6
  %8 = call i32 @callout_init(i32* %7, i32 1)
  %9 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %10 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %9, i32 0, i32 0
  store i8 85, i8* %10, align 8
  %11 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %12 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %11, i32 0, i32 5
  store i64 0, i64* %12, align 8
  %13 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %14 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %13, i32 0, i32 4
  store i64 0, i64* %14, align 8
  %15 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %16 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %15, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %18 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %17, i32 0, i32 2
  store i64 0, i64* %18, align 8
  %19 = load %struct.tool_ctx*, %struct.tool_ctx** %2, align 8
  %20 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %19, i32 0, i32 1
  store i64 0, i64* %20, align 8
  ret i32 0
}

declare dso_local i32 @callout_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
